--- a/src/styles/question.scss
+++ b/src/styles/question.scss
@@ -8,6 +8,23 @@
     margin-top: 8px;
   }
 
+  &.highlighted {
+    background-color: #f4f0ff;
+    border: 1px solid #835afd;
+    
+    footer .user-info span {
+      color: #29292e;
+    }
+  }
+
+  &.answered {
+    background-color: #dbdcdd;
+
+    footer .user-info img {
+      filter: grayscale(100%);
+    }
+  }
+
   p {
     color: #29292e;
   }
@@ -36,6 +53,11 @@
       }
     }
 
+    > div {
+      display: flex;
+      gap: 16px;
+    }
+    
     button {
       border: 0;
       background-color: transparent;
