--- a/src/styles/room-code.scss
+++ b/src/styles/room-code.scss
@@ -24,7 +24,8 @@
     flex: 1;
     
     padding: 0 16px 0 12px;
-    width: 240px;
+    min-width: 240px;
+    max-width: 500px;
 
     font-size: 14px;
     font-weight: 500;
